--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -215,7 +215,7 @@
                                         fill="#FFD788" />
                                 </svg>
                                 <div class="user-help-label">How to create an Ethereum wallet to get tokens</div>
-                                <a class="user-help-link">Download</a>
+                                <a href="../CreateWallet.pdf" target="_blank" class="user-help-link">Download</a>
                             </div>
                             <div>
                                 <svg class="float-left" width="38" height="38" viewBox="0 0 38 38" fill="none"
@@ -225,7 +225,7 @@
                                         fill="#FFD788" />
                                 </svg>
                                 <div class="user-help-label">How to buy Ethereum from Credit Card</div>
-                                <a class="user-help-link">Download</a>
+                                <a href="https://99bitcoins.com/buy-ethereum/" target="_blank" class="user-help-link">Download</a>
                             </div>
                         </div>
                     </section>
