Fixed password placeholder to be more html compliant

--- a/views/login.html
+++ b/views/login.html
@@ -115,7 +115,7 @@
 
                             <label for="form-pass" class="form__input">
                                 <span class="label">Password</span>
-                                <input type="password" id="form-pass" placeholder="••••••••" required
+                                <input type="password" id="form-pass" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;" required
                                     autocomplete="current-password">
                             </label>
 
