--- a/views/register.html
+++ b/views/register.html
@@ -114,7 +114,7 @@
 
                             <label for="form-pass" class="form__input">
                                 <span class="label">Password</span>
-                                <input type="password" id="form-pass" placeholder="••••••••" required>
+                                <input type="password" id="form-pass" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;" required>
                             </label>
 
                             <label for="form-mail" class="form__input">
