--- a/views/login.html
+++ b/views/login.html
@@ -149,8 +149,8 @@
     <script src="../js/login.js"></script>
     <script src="../js/transitions.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@0.20.6/dist/web3.min.js"></script>
-
+    <script src="../plugins/sha256/sha256.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 </body>
 
 </html>
