--- a/views/recovery.html
+++ b/views/recovery.html
@@ -135,6 +135,8 @@
 
     <script src="../js/recovery.js"></script>
     <script src="../js/transitions.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 </body>
 
 </html>
