--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -343,6 +343,8 @@
     <script src="../js/userAccount.js"></script>
     <script src="../js/transitions.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@0.20.6/dist/web3.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+    
 </body>
 
 </html>
