--- a/views/login.html
+++ b/views/login.html
@@ -85,6 +85,7 @@
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/userAccount.css">
 
     <!-- Title -->
     <title>CURATE</title>
