--- a/views/register.html
+++ b/views/register.html
@@ -85,7 +85,8 @@
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="../styles/main.css">
-
+    <link rel="stylesheet" href="../styles/userAccount.css">
+    
     <!-- Title -->
     <title>CURATE</title>
 
