--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -84,6 +84,9 @@
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/userAccount.css">
+
+    <script src="https://cdn.airswap.io/gallery/airswap-trader.js"></script>
 
     <!-- Title -->
     <title>CURATE</title>
@@ -111,7 +114,7 @@
                     </ul>
                 </div>
 
-                <div >
+                <div>
                     <ul class="main-nav__rightside-list main-nav__rightside-account">
                         <li class="main-nav__rightside-item d-none">
                             <a class="main-nav__rightside-link" href="#">
@@ -201,33 +204,50 @@
             <p class="user-greeting">Hey, <span id="user-name"></span></p>
             <div class="user-account-header-section">
                 <ul class="user-account-header">
-                    <li class="main-nav__item faded-label">Your balance</li>
-                    <li class="main-nav__item faded-label">Registered</li>
-                    <li class="main-nav__item faded-label">E-mail</li>
-                </ul>
-                <ul class="user-account-header float-left">
-                    <li class="main-nav__item light-label">
-                        <img src="../img/main/logo32.png" class="user-balance-icon" />
-                        <span class="centered-text" id="user-curate-balance">0</span>
+                    <li class="user-nav__item">
+                        <span class="faded-label">Your balance</span>
+                        <div class="light-label">
+                            <img src="../img/main/logo32.png" class="user-balance-icon" />
+                            <span class="centered-text" id="user-curate-balance">N/A</span>
+                        </div>
                     </li>
-                    <li class="main-nav__item light-label" id="user-created"></li>
-                    <li class="main-nav__item light-label" id="user-email"></li>
+                    <li class="user-nav__item">
+                        <span class="faded-label">Registered</span>
+                        <div class="light-label" id="user-created"></div>
+                    </li>
+                    <li class="user-nav__item">
+                        <span class="faded-label">E-mail</span>
+                        <div class="light-label" id="user-email"></div>
+                    </li>
+                    <li class="user-nav__item">
+                        <a target="_blank" href="../whitepaper.pdf" class="btn btn--simple no-padding">
+                            <img src="../img/sprites/intermediate-svg/writing.svg" class="btn__icon__colored"
+                                alt="icon writing">
+                            <span>WHITEPAPER</span>
+                        </a>
+                    </li>
                 </ul>
-                <a target="_blank" href="../whitepaper.pdf" class="btn btn--simple float-right no-padding">
-                    <img src="../img/sprites/intermediate-svg/writing.svg" class="btn__icon__colored"
-                        alt="icon writing">
-                    <span>WHITEPAPER</span>
-                </a>
             </div>
             <div class="user-purchase-section">
-                <p class="user-section-header">Purchase a token</p>
-                <p class="coming-soon">Coming Soon</p>
+                <p class="user-section-header">Purchase tokens</p>
+                <!-- <p class="coming-soon">Coming Soon</p> -->
+                <div class="ieo-link-section">
+                    <p>IEO Available on</p>
+                    <div class="ieo-link-logos">
+                        <a style="display:block" href="https://p2pb2b.io/token-sale/CUR8/1" target="_blank">
+                            <img src="../img/main/p2pb2b.svg">
+                        </a>
+                        <a id="airswap">
+                            <img src="../img/main/airswap.svg">
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="user-help-section">
                 <p class="user-section-header">We have prepared detailed instructions for you:</p>
                 <div class="user-section-container">
                     <div class="float-left">
-                        <svg class="float-left" width="38" height="38" viewBox="0 0 38 38" fill="none"
+                        <svg class="float-left" width="38" height="90" viewBox="0 0 38 90" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M12.45 8.4C12.6 8.4 12.6 8.4 12.45 8.4C12.6 7.8 12.75 7.5 12.75 7.05V6.75C12.9 6 12.9 5.4 12.75 5.25C12.75 5.25 12.75 5.25 12.75 5.1L12.6 4.95C12.6 4.95 12.6 5.1 12.45 5.1C12.15 6 12.15 7.05 12.45 8.4ZM7.95 18.75C7.65 18.9 7.35 19.05 7.2 19.2C6.15 20.1 5.4 21.1499 5.25 21.6C6.15 21.45 7.05 20.55 7.95 18.75C8.1 18.75 8.1 18.75 7.95 18.75C8.1 18.75 7.95 18.75 7.95 18.75ZM21.75 16.5C21.6 16.35 21 15.9 18.9 15.9C18.75 15.9 18.75 15.9 18.6 15.9C18.6 15.9 18.6 15.9 18.6 16.05C19.65 16.5 20.7 16.8 21.45 16.8C21.6 16.8 21.6 16.8 21.75 16.8H21.9C21.9 16.8 21.9 16.8 21.9 16.65C21.9 16.65 21.75 16.65 21.75 16.5ZM24 0H3C1.35 0 0 1.35 0 3V24C0 25.65 1.35 27 3 27H24C25.65 27 27 25.65 27 24V3C27 1.35 25.65 0 24 0ZM22.35 17.7C22.0499 17.85 21.6 18 21 18C19.8 18 18 17.7 16.5 16.95C13.95 17.25 12 17.5499 10.5 18.1499C10.35 18.1499 10.35 18.1499 10.2 18.2999C8.4 21.45 6.9 22.95 5.7 22.95C5.4 22.95 5.25 22.95 5.1 22.7999L4.35 22.35V22.2C4.2 21.8999 4.2 21.75 4.2 21.45C4.35 20.7 5.25 19.35 7.05 18.2999C7.35 18.1499 7.8 17.85 8.4 17.5499C8.85 16.7999 9.3 15.8999 9.9 14.85C10.65 13.35 11.1 11.85 11.55 10.5C10.95 8.7 10.65 7.65 11.25 5.55C11.4 4.95 11.85 4.35 12.45 4.35H12.75C13.05 4.35 13.35 4.5 13.65 4.65C14.7001 5.7 14.25 8.1 13.65 10.05C13.65 10.2 13.65 10.2 13.65 10.2C14.25 11.85 15.15 13.2 16.05 14.1C16.5 14.4 16.8 14.7 17.4 15C18.15 15 18.75 14.85 19.35 14.85C21.15 14.85 22.35 15.15 22.7999 15.9C22.95 16.2001 22.95 16.5 22.95 16.8C22.8 16.95 22.65 17.4 22.35 17.7ZM12.6 11.85C12.3 12.9 11.7 14.1 11.1 15.45C10.8 16.0499 10.5 16.5 10.2 17.1H10.35H10.5C12.45 16.35 14.25 15.9 15.45 15.75C15.1499 15.6 15 15.45 14.85 15.3C14.1 14.4 13.2 13.2 12.6 11.85Z"
@@ -237,7 +257,7 @@
                         <a href="../CreateWallet.pdf" target="_blank" class="user-help-link">Download</a>
                     </div>
                     <div>
-                        <svg class="float-left" width="38" height="38" viewBox="0 0 38 38" fill="none"
+                        <svg class="float-left" width="38" height="90" viewBox="0 0 38 90" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M12.45 8.4C12.6 8.4 12.6 8.4 12.45 8.4C12.6 7.8 12.75 7.5 12.75 7.05V6.75C12.9 6 12.9 5.4 12.75 5.25C12.75 5.25 12.75 5.25 12.75 5.1L12.6 4.95C12.6 4.95 12.6 5.1 12.45 5.1C12.15 6 12.15 7.05 12.45 8.4ZM7.95 18.75C7.65 18.9 7.35 19.05 7.2 19.2C6.15 20.1 5.4 21.1499 5.25 21.6C6.15 21.45 7.05 20.55 7.95 18.75C8.1 18.75 8.1 18.75 7.95 18.75C8.1 18.75 7.95 18.75 7.95 18.75ZM21.75 16.5C21.6 16.35 21 15.9 18.9 15.9C18.75 15.9 18.75 15.9 18.6 15.9C18.6 15.9 18.6 15.9 18.6 16.05C19.65 16.5 20.7 16.8 21.45 16.8C21.6 16.8 21.6 16.8 21.75 16.8H21.9C21.9 16.8 21.9 16.8 21.9 16.65C21.9 16.65 21.75 16.65 21.75 16.5ZM24 0H3C1.35 0 0 1.35 0 3V24C0 25.65 1.35 27 3 27H24C25.65 27 27 25.65 27 24V3C27 1.35 25.65 0 24 0ZM22.35 17.7C22.0499 17.85 21.6 18 21 18C19.8 18 18 17.7 16.5 16.95C13.95 17.25 12 17.5499 10.5 18.1499C10.35 18.1499 10.35 18.1499 10.2 18.2999C8.4 21.45 6.9 22.95 5.7 22.95C5.4 22.95 5.25 22.95 5.1 22.7999L4.35 22.35V22.2C4.2 21.8999 4.2 21.75 4.2 21.45C4.35 20.7 5.25 19.35 7.05 18.2999C7.35 18.1499 7.8 17.85 8.4 17.5499C8.85 16.7999 9.3 15.8999 9.9 14.85C10.65 13.35 11.1 11.85 11.55 10.5C10.95 8.7 10.65 7.65 11.25 5.55C11.4 4.95 11.85 4.35 12.45 4.35H12.75C13.05 4.35 13.35 4.5 13.65 4.65C14.7001 5.7 14.25 8.1 13.65 10.05C13.65 10.2 13.65 10.2 13.65 10.2C14.25 11.85 15.15 13.2 16.05 14.1C16.5 14.4 16.8 14.7 17.4 15C18.15 15 18.75 14.85 19.35 14.85C21.15 14.85 22.35 15.15 22.7999 15.9C22.95 16.2001 22.95 16.5 22.95 16.8C22.8 16.95 22.65 17.4 22.35 17.7ZM12.6 11.85C12.3 12.9 11.7 14.1 11.1 15.45C10.8 16.0499 10.5 16.5 10.2 17.1H10.35H10.5C12.45 16.35 14.25 15.9 15.45 15.75C15.1499 15.6 15 15.45 14.85 15.3C14.1 14.4 13.2 13.2 12.6 11.85Z"
@@ -344,7 +364,7 @@
     <script src="../js/transitions.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@0.20.6/dist/web3.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-    
+
 </body>
 
 </html>
