--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -231,9 +231,9 @@
             <div class="user-purchase-section">
                 <p class="user-section-header">Purchase tokens</p>
                 <!-- <p class="coming-soon">Coming Soon</p> -->
-                <div class="ieo-link-section">
+                <div class="user-ieo-link-section">
                     <p>IEO Available on</p>
-                    <div class="ieo-link-logos">
+                    <div class="user-ieo-link-logos">
                         <a style="display:block" href="https://p2pb2b.io/token-sale/CUR8/1" target="_blank">
                             <img src="../img/main/p2pb2b.svg">
                         </a>
