--- a/styles/main.css
+++ b/styles/main.css
@@ -655,7 +655,6 @@ div.menu {
 
 div.menu ul li {
     list-style: none;
-    position: absolute;
     top: 50px;
     left: 0;
     opacity: 0;
@@ -668,7 +667,9 @@ div.menu ul li {
     -o-transition: all 70ms cubic-bezier(0, 0.995, 0.99, 1);
     transition: all 70ms cubic-bezier(0, 0.995, 0.99, 1);
 }
-
+.header-mobile__nav-menu {
+    margin-top:100px;
+}
 div.menu li.animate {
     font-size: 21px;
     opacity: 1;
@@ -685,27 +686,27 @@ div.menu li.animate:nth-of-type(1) {
 }
 
 div.menu li.animate:nth-of-type(2) {
-    top: 190px;
+    top: 180px;
     transition-delay: 0.03s;
 }
 
 div.menu li.animate:nth-of-type(3) {
-    top: 260px;
+    top: 220px;
     transition-delay: 0.06s;
 }
 
 div.menu li.animate:nth-of-type(4) {
-    top: 330px;
+    top: 270px;
     transition-delay: 0.09s;
 }
 
 div.menu li.animate:nth-of-type(5) {
-    top: 430px;
+    top: 320px;
     transition-delay: 0.12s;
 }
 
 div.menu li.animate:nth-of-type(6) {
-    top: 500px;
+    top: 370px;
     transition-delay: 0.15s;
 }
 
